--- a/.editorconfig
+++ b/.editorconfig
@@ -1,2 +1,8 @@
 [*.{kt,kts}]
 ktlint_chain_method_rule_force_multiline_when_chain_operator_count_greater_or_equal_than = unset
+
+[build/**/*]
+ktlint = disabled
+
+[core/build/**/*]
+ktlint = disabled
